oioioi/notifications/static/common/notifications.scss
@import "bootstrap/stylesheets/functions";
@import "bootstrap/stylesheets/variables";
@import "bootstrap/stylesheets/mixins";

#notifications_panel .dropdown-menu {
  padding-bottom: 0;
  > li {
    white-space: nowrap;
    &.dropdown-header {
      font-weight: bold;
      font-size: 1.2em;
      padding: 0.5em;
    }
    .table {
      color: $body-color;
      margin-bottom: 0;
    }
  }
}

#notifications_banner > * {
  padding: 0.5em;
}

